# SimplePdfScanner

.github/workflows/: android-build.yml
simple_pdf_scanner/: README.md  commands.sh  pubspec.yaml
simple_pdf_scanner/android/: build.gradle  settings.gradle
simple_pdf_scanner/android/app/: build.gradle
simple_pdf_scanner/android/app/src/debug/: AndroidManifest.xml
simple_pdf_scanner/android/app/src/main/: AndroidManifest.xml
simple_pdf_scanner/android/app/src/main/cpp/: CMakeLists.txt  find-cut-squares.cpp  find-cut-squares.hpp  native-lib.cpp
simple_pdf_scanner/android/app/src/main/java/com/emmanuelmess/simple_pdf_scanner/: PhotoActivity.kt
simple_pdf_scanner/android/app/src/main/java/com/emmanuelmess/simple_pdf_scanner/processing/: MainProcessor.kt
simple_pdf_scanner/android/app/src/main/kotlin/com/emmanuelmess/simple_pdf_scanner/: MainActivity.kt  MainProcessor.kt
simple_pdf_scanner/android/app/src/main/res/layout/: activity_photo.xml
simple_pdf_scanner/android/gradle/wrapper/: gradle-wrapper.properties
simple_pdf_scanner/ios/Runner/: Info.plist
simple_pdf_scanner/ios/Runner.xcodeproj/: project.pbxproj
simple_pdf_scanner/lib/: animation.dart  camera.dart  image_editor.dart  main.dart  pdfitem.dart  pdflist.dart
simple_pdf_scanner/lib/db/: database.dart  database.g.dart
simple_pdf_scanner/lib/db/dao/: image_dao.dart  protopdf_dao.dart
simple_pdf_scanner/lib/db/entity/: image.dart  protopdf.dart
simple_pdf_scanner/lib/l10n/: en.json  es.json
simple_pdf_scanner/test/: widget_test.dart
